fix(security): religa RateLimitFilter, endurece ClientHeaderFilter e JwtAuthenticationFilter
- RateLimitFilter volta a compor a cadeia de filtros antes do LogoutFilter e UsernamePasswordAuthenticationFilter
- ClientHeaderFilter passa a delegar 403 ao JsonAccessDeniedHandler e usa lista exata de rotas isentas (SecurityRoutes), aceitando apenas X-API-KEY preenchido ou Authorization: Bearer eq_... como credencial de integracao
- JwtAuthenticationFilter: conflito X-API-KEY x Authorization divergentes conta falha no rate limiter; falha em registrarUso nao derruba a requisicao principal (try/catch); esquema de Authorization invalido e ignorado nas rotas isentas
- ApiKeyService.registrarUso propaga excecao (REQUIRES_NEW) para rollback limpo; sha256Hex otimizado com HexFormat
- UsuarioRepository.atualizarUltimoUsoComThrottling marcado @Transactional explicito